SERVER-15620 Must hold ReplicationCoordinatorImpl::_mutex while scanning the waiter list.